# QualisysTCPConnection

./: CMakeLists.txt
include/: AModeUSConnection.h  QualisysConnection.h  QualisysLogger.h
src/: AModeUSConnection.cpp  CMakeLists.txt  QualisysConnection.cpp  QualisysConnection.h  QualisysLogger.cpp  main.cpp
